[package]
name = "hlcup"
version = "0.1.0"
authors = ["Roman Kotelnikov <roman.kotelnikov@outlook.com>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
histogram = "*"
lazy_static = "*"
tracing-subscriber = "0.2"
tracing = "0.1"